@@ -1,3 +1,14 @@
+2006-08-25  Brady Eidson  <beidson@apple.com>
+
+        Reviewed by Adam
+
+        Changed some time()-related code to be more platform independent
+
+        * loader/icon/IconDatabase.cpp:
+        (WebCore::IconDatabase::isIconExpiredForIconURL):
+        (WebCore::IconDatabase::getOrCreateIconDataCache):
+        (WebCore::IconDatabase::setIconDataForIconURL):
+
 2006-08-25  David Harrison  <harrison@apple.com>
 
         Reviewed by Geoff.
